// Enable UUID extension

Table Users {
  id uuid [primary key, default: `uuid_generate_v4()`]
  username varchar(50) [unique]
  password_hash varchar(255)
  name varchar(50) [not null]
  avatar_url text
  email varchar(255) [unique]
  provider varchar(20) [note: "Enum: 'google', 'apple', 'local'"]
  provider_id varchar(255)
  role varchar(10) [default: 'user', note: "Enum: 'user', 'admin', 'super admin'"]
  is_active boolean [default: true]
  isVerify boolean [default: false]
  community_points int [default: 0]
  subscription_id uuid [not null]
  subscription_expiry timestamptz [note: "Cho phép NULL cho Free user và người đăng ký gói vĩnh viễn"]
  level varchar(3) [not null, note: "Enum: '1', '2', '3', '4', '5', '6', '7-9'"]
  badge_level int [not null, default: 0]
  language varchar(10) [not null, note: "Enum: 'Tiếng Việt', 'Tiếng Anh'"]
  created_at timestamptz [default: `CURRENT_TIMESTAMP`]
  last_login timestamptz
  
  Note: '''
  - Bảng trung tâm cho hồ sơ người dùng, hỗ trợ đăng nhập qua username/password, goole, apple.
  - Username/password_hash cho đăng nhập local (hash bcrypt), provider/provider_id cho OAuth (Google/Apple).
  - Email và name có thể null.
  - Điểm cộng đồng tổng hợp từ Posts/Comments (likes*10, posts*20, comments_received*20), lưu trực tiếp để tối ưu query.
  - isVerify hỗ trợ xác thực email, tăng bảo mật.
  - subscription_id: not null - tự động gán id gói free cho người dùng ngay khi tạo tài khoản
  '''
  
  Indexes {
    username [unique]
    email [unique]
    (provider, provider_id) [type: btree]
    created_at [type: btree]
    role [type: btree]
    community_points [type: btree]
  }
}

Table UserSessions {
  id uuid [primary key, default: `uuid_generate_v4()`]
  user_id uuid [not null]
  login_at timestamptz [not null, default: `CURRENT_TIMESTAMP`]
  logout_at timestamptz
  device varchar(50) [note: "mobile, web, desktop"]
  ip_address varchar(50)

  Note: '''
  - Lưu lại chi tiết từng phiên login/logout.
  - Dùng để tính toán thời gian online chi tiết hoặc phát hiện đăng nhập bất thường.
  '''

  Indexes {
    user_id [type: btree]
    login_at [type: btree]
  }
}

Table UserDailyActivity {
  user_id uuid [not null]
  date date [not null]
  minutes_online int [default: 0]
  login_count int [default: 0]

  Note: '''
  - Tóm tắt hoạt động theo ngày (minutes online, số lần login).
  - Hỗ trợ thống kê theo tuần/tháng dễ dàng.
  '''

  Indexes {
    user_id [type: btree]
    date [type: btree]
  }

  primary key (user_id, date)
}

Table UserStreaks {
  user_id uuid [primary key]
  current_streak int [default: 0]
  longest_streak int [default: 0]
  last_login_date date

  Note: '''
  - Quản lý chuỗi ngày đăng nhập liên tục (gamification).
  - current_streak reset nếu người dùng bỏ lỡ 1 ngày.
  - longest_streak lưu kỷ lục cao nhất để hiển thị thành tựu.
  '''
}

Table Achievements {
  id uuid [primary key, default: `uuid_generate_v4()`]
  name varchar(100) [not null, unique, note: "Tên thành tích, ví dụ: 'Gấu chăm chỉ', 'Thánh tra cứu'"]
  description text [not null, note: "Mô tả thành tích, ví dụ: 'Đăng nhập liên tục 7 ngày'"]
  criteria jsonb [not null, note: "Tiêu chí đạt được dưới dạng JSON để linh hoạt, ví dụ: {'type': 'login_streak', 'min_streak': 7} hoặc {'type': 'translation_usage', 'min_count': 30, 'feature': 'ai_translate'}"]
  icon text [note: "URL icon hiển thị cho thành tích"]
  points int [default: 0, note: "Điểm thưởng cộng vào community_points khi đạt được"]
  is_active boolean [default: true, note: "Admin có thể tắt/mở thành tích"]
  created_at timestamptz [default: `CURRENT_TIMESTAMP`]
  updated_at timestamptz [default: `CURRENT_TIMESTAMP`]
  
  Note: '''
  - Quản lý các thành tích (achievements) do admin tạo/sửa.
  - criteria JSONB cho phép định nghĩa linh hoạt các điều kiện (dựa trên UserStreaks, UserUsage, TranslationHistory, etc.).
  - Ví dụ criteria:
    - {'type': 'login_streak', 'min_streak': 7} -> Thành tích 'Gấu chăm chỉ'
    - {'type': 'translation_usage', 'min_count': 30, 'feature': 'ai_translate'} -> Thành tích 'Thánh tra cứu'
    - {'type': 'community_points', 'min_points': 1000} -> Thành tích 'Người đóng góp xuất sắc'
  - Cron job hoặc trigger kiểm tra criteria và cấp thành tích qua UserAchievements.
  - points: Số điểm thưởng, cộng vào Users.community_points khi đạt được.
  '''
  
  Indexes {
    name [unique]
    is_active [type: btree]
  }
}

-- Table UserAchievements
Table UserAchievements {
  id uuid [primary key, default: `uuid_generate_v4()`]
  user_id uuid [not null]
  achievement_id uuid [not null]
  achieved_at timestamptz [default: `CURRENT_TIMESTAMP`]
  progress jsonb [note: "Tiến độ hiện tại nếu cần (ví dụ: {'current_count': 25, 'required': 30}), NULL nếu không theo dõi progress"]
  
  Note: '''
  - Liên kết N:N giữa Users và Achievements, lưu thời gian đạt được.
  - progress JSONB để theo dõi tiến độ (nếu thành tích có tiêu chí đếm dần, như số lần dịch).
  - Unique constraint (user_id, achievement_id) để tránh cấp trùng lặp.
  - Cron job update progress và cấp thành tích khi đạt criteria.
  '''
  
  Indexes {
    (user_id, achievement_id) [unique]
    user_id [type: btree]
    achievement_id [type: btree]
    achieved_at [type: btree]
  }
}

Table AdminLogs {
  id uuid [primary key, default: `uuid_generate_v4()`]
  user_id uuid [not null, note: "Tham chiếu Users.id, chỉ lưu user có role admin/super_admin"]
  action_type varchar(50) [not null, note: "Enum: CREATE, UPDATE, DELETE, BAN_USER, ..."]
  target_id uuid [note: "Đối tượng bị tác động, có thể là user_id, post_id, ..."]
  description text
  created_at timestamptz [default: `CURRENT_TIMESTAMP`]
  
  Note: '''
  - Theo dõi hành động admin (ví dụ, xóa post, khóa user) để kiểm toán.
  - user_id tham chiếu tới bảng Users, nhưng chỉ cho phép role admin/super_admin.
  '''
  
  Indexes {
    user_id [type: btree]
    created_at [type: btree]
  }
}

Table RefreshTokens {
  id uuid [primary key, default: `uuid_generate_v4()`]
  user_id uuid [not null]
  token text [unique, not null]
  created_at timestamptz [default: `CURRENT_TIMESTAMP`]
  expires_at timestamptz [not null]
  
  Note: '''
  - Lưu trữ refresh token cho cơ chế xác thực, đảm bảo token là duy nhất.
  '''
  
  Indexes {
    user_id [type: btree]
    token [unique]
  }
}

// Relationships within this file
Ref: UserSessions.user_id > Users.id [delete: cascade]
Ref: UserDailyActivity.user_id > Users.id [delete: cascade]
Ref: UserStreaks.user_id > Users.id [delete: cascade]
Ref: UserAchievements.user_id > Users.id [delete: cascade]
Ref: UserAchievements.achievement_id > Achievements.id [delete: restrict]
Ref: AdminLogs.user_id > Users.id [delete: set null]
Ref: RefreshTokens.user_id > Users.id [delete: cascade]